[package]
name = "vulpes_porto"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "multipart"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

chrono = { version = "0.4.19", default-features = false, features = ["clock"] }

rand = "0.8.5"

anyhow = "1.0.57"

md5 = "0.7.0"
once_cell = "1.16.0"
